fix: I added a title contact us in a version mobile and I fixed some spaces

--- a/style.css
+++ b/style.css
@@ -418,7 +418,7 @@ body {
     .div_main_container_services {
       display: flex;
       flex-direction: column;
-
+      margin-bottom: -90px;
     }
 
     .div_container_services {
@@ -662,6 +662,10 @@ textarea:focus {
   transition: background-color 0.3s ease;
 }
 
+.h2_contactus_mobile {
+  display: none;
+}
+
 /* Estilos para la versión móvil */
 @media screen and (max-width: 768px) {
   .menu {
@@ -686,6 +690,13 @@ textarea:focus {
       right: 20px;
       z-index: 999;
   }
+
+  .h2_contactus_mobile {
+    display: flex;
+    margin-top: 70px;
+    color: #343a40;
+    font-size: 48px;
+  }
 }
 
 .span_text_services {
@@ -709,3 +720,4 @@ textarea:focus {
   font-size: 13px;
   font-weight: 400;
 }
+
